2018-xx-xx - 2.2.7
-------------------------------
- Changed default appointments sorting to "Appointment Date".
- Fixed export problem for date range.
- Fixed export problem for additional fields with html entites in name.

2018-xx-xx - 2.2.6
-------------------------------
- Added ability to delete "Service".
- Added ability to delete "Service Provider".
- Added asterisk to required fields label on appointment form.
- Fixed a problem with appointments details, the start hour of appointment is now depended on settings.
- Fixed a problem with Appointments settings on the BuddyPress profile.
- Fixed a problem with BuddyPress profile integration.
- Fixed a problem with double send reminders.
- Fixed a problem with the tutorial restart.
- Fixed a warning message for ob_end_flush() in an older version of PHP.
- Improved appointments calendars, now start on the day set in WordPress options.

2018-03-27 - 2.2.5
-------------------------------
- Added filter 'app-export-appointment-args' which allows changing export arguments eg. sorting field.
- Fixed incompatibilities with Divi Builder.
- Fixed missing sortings on the frontend.
- Fixed problems with changing the custom time for slots.
- Fixed problem with paddings.
- Fixed re-send confirmation emails.
- Improved Yes/No choice used on appointments configuration screen.

2018-01-29 - 2.2.4
-------------------------------
- Fixed a problem with the export of single appointment.
- Fixed a problem with no visible slots on Weekly Calendar view.
- Fixed a problem with viewing PayPal transaction.
- Fixed potential vulnerabilities in appointments list.
- Improved "Create an Appointment Page" UX.
- Improved default additional CSS to avoid interaction with default classes.
- Improved help tab, now we use WordPress built-in help tab.

2017-11-21 - 2.2.3
-------------------------------
- Fixed export additional appointment fields (only PRO version).
- Fixed problem with bower_components directory.